<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/listview_item_border"
    android:padding="20dp"
    android:layout_marginBottom="15dp">

    <TextView
        android:id="@+id/SupportTicket_Tv_Ticket"
        style="@style/DataText_Medium"
        android:layout_width="wrap_content"
        android:text="@string/support_ticket_example"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SupportTicket_Tv_LabelState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/state"
        style="@style/DataText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SupportTicket_Tv_Ticket" />

    <TextView
        android:id="@+id/SupportTicket_Tv_State"
        style="@style/DataText_MediumItalic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:text="@string/state_example"
        app:layout_constraintStart_toEndOf="@+id/SupportTicket_Tv_LabelState"
        app:layout_constraintTop_toBottomOf="@+id/SupportTicket_Tv_Ticket" />

    <Button
        android:id="@+id/SupportTicket_Bt_Item"
        style="@style/SecondaryButtonOutline"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/see_item"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SupportTicket_Tv_State" />

    <Button
        android:id="@+id/SupportTicket_Bt_Details"
        style="@style/PrimaryButton"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/more_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SupportTicket_Bt_Item" />


</androidx.constraintlayout.widget.ConstraintLayout>